// endpoints/messages.proto
// Generated by django-cfg django_client module
// DO NOT EDIT - This file is auto-generated

syntax = "proto3";

package cfg.v1.endpoints;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message Endpointsitem {
}

message Endpointsstatus {

  string status = 1;
  google.protobuf.Timestamp timestamp = 2;
  int64 total_endpoints = 3;
  int64 healthy = 4;
  int64 unhealthy = 5;
  int64 warnings = 6;
  int64 errors = 7;
  int64 skipped = 8;
  repeated Endpointsitem endpoints = 9;
}

message Endpoint {

  string url = 1;
  optional string url_pattern = 2;
  optional string url_name = 3;
  optional string namespace = 4;
  string group = 5;
  optional string view = 6;
  string status = 7;
  optional int64 status_code = 8;
  optional double response_time_ms = 9;
  optional bool is_healthy = 10;
  optional string error = 11;
  optional string error_type = 12;
  optional string reason = 13;
  optional google.protobuf.Timestamp last_checked = 14;
  optional bool has_parameters = 15;
  optional bool required_auth = 16;
  optional bool rate_limited = 17;
}

message Urlsitem {
}

message Urlslist {

  string status = 1;
  string service_value = 2;
  string version = 3;
  string base_url = 4;
  int64 total_urls = 5;
  repeated Urlsitem urls = 6;
}

message Urlpattern {

  string pattern = 1;
  optional string name = 2;
  optional string full_name = 3;
  optional string namespace = 4;
  optional string view = 5;
  optional string view_class = 6;
  repeated string methods = 7;
  optional string module = 8;
}